# resources

./: .gitignore  LICENSE  README.md  organize.md  pyproject.toml  task.md  terminal.md
plan/season-1/: episode1.md
season-1/: analytics_basics.py  episode1_engine_swap.py
season-1/data-transformation/: overview.md  resource.py
season-1/data-visualization/: overview.md  resource.py
season-1/polars-pandas/: .gitignore  README.md  resource.py  verify_setup.py
season-1/polars-pandas/data/: generate_dataset.py
season-1/polars_pandas/: overview.md  resource.py  verify_setup.py
season-1/polars_pandas/data/: generate_dataset.py
season-1/sql/: README.md  overview.md  resource.py
season-1/statistical-testing/: overview.md  resource.py
season-1/terminal/: lbtm.ipynb  overview.md  resource.py
