[project]
name = "saturdata-resources"
version = "0.1.0"
description = "Analytics and data science resources for Saturdata"
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.24.0",
    "pandas>=2.0.0",
    "polars[pyarrow]>=0.20.0",
    "scipy>=1.10.0",
    "matplotlib>=3.7.0",
    "seaborn>=0.12.0",
    "pyarrow>=21.0.0",
    "plotly>=6.3.1",
    "duckdb>=1.4.1",
    "sqlglot>=27.26.0",
    "altair>=5.5.0",
    "marimo>=0.17.6",
]

[dependency-groups]
dev = []
